fixed some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ a {
   margin: 2vh;
 }
 #about-box {
-  width: 90%;
+  width: 80%;
   padding-left: 70px;
 }
 .home-title {
